# Chariotte

./: .directory  .gitignore  CMakeLists.txt  Chariotte.kdev4
.bck/: Chariotte_fr_FR.ts
.kdev4/: Chariotte.kdev4
bck/: basicpopup.cpp  basicpopup.h  popupsysinfo.cpp  popupsysinfo.ui
source/: .directory  CMakeLists.txt  main.cpp  main_rc.qrc
source/lang/: .directory  CMakeLists.txt  Chariotte_fr_FR.qm
source/mainwindow/: .directory  log.cpp  log.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
source/rc/: CMakeLists.txt
source/rc/ico/: .directory
source/rc/ico/food/: .directory
source/rc/ico/tosort/SVG_food/: .directory
source/rc/ico/tosort/SVG_misc/32x32/: .directory
source/rc/ico/tosort/SVG_simple/SVG_black_icons/: .directory
source/rc/ico/tosort/SVG_simple/SVG_green_icons/: .directory
source/subwindows/: CMakeLists.txt  popupabout.cpp  popupabout.h  popupeditingredient.cpp  popupeditingredient.h  popupeditingredient.ui  popupsysinfo.cpp  popupsysinfo.h  popupsysinfo.ui
source/utilities/: .directory  CMakeLists.txt  chariotte_utils.h
source/widgets/: .directory  CMakeLists.txt  basicpopup.cpp  basicpopup.h  blinkablepushbutton.cpp  blinkablepushbutton.h  interactivelabel.cpp  interactivelabel.h  popupsysinfo.h  statuslabel.cpp  statuslabel.h
